# PythonScriptingInterface

./: .gitignore  CMakeLists.txt  Doxyfile  PythonScriptingInterfaceConfig.cmake.in  README.md
src/: PythonBinding.cpp  PythonBinding.h  PythonHelpers.h  generalHelpers.h  pyhelper.h  pysharedreference.cpp  pysharedreference.h  pythondictonary.cpp  pythondictonary.h  pythonguard.cpp  pythonguard.h  pythonobject.cpp  pythonobject.h
